# mcp-server-gaokao

./: README.md  pyproject.toml
src/mcp_server_gaokao/: __init__.py  __main__.py  server.py
src/mcp_server_gaokao/data/: all_headers.json  all_major.json
src/mcp_server_gaokao/tools/: __init__.py  base.py  query_major_info.py
src/mcp_server_gaokao/utils/: __init__.py  get_data.py  schema.py
